static/css/base.css
/* GLOBAL VARIABLES */
:root {
  --primary-background-color: whitesmoke;
  --primary-text-color: #1b1b1b;
  --default-font-size: 16px;
  --heading-font: ProximaNova-Bold;
  --content-font: AGaramondPro-Regular; 
}

/* layout */
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--content-font);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: centers;
  align-items: center;
  line-height: 1.66rem;
}

main {
  width: 768px;
  flex: 1 0 auto;
}

/* fonts and stuff */
.MathJax {
  font-size: 100% !important;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--heading-font);
}

h1 {
    font-size: 2rem; /* Adjust h1 font size for smaller screens */
}

h2 {
    font-size: 1.75rem; /* Adjust h2 font size for smaller screens */
}

h3 {
    font-size: 1.5rem; /* Adjust h3 font size for smaller screens */
}

h4 {
    font-size: 1.25rem; /* Adjust h4 font size for smaller screens */
}

h5 {
    font-size: 1.125rem; /* Adjust h5 font size for smaller screens */
}

h6 {
    font-size: 1rem; /* Adjust h6 font size for smaller screens */
}

p {
    font-size: 1rem; /* Adjust p font size for smaller screens */
}

/* FONTS */
/* Adobe Garamond Pro */
@font-face {
    font-family: 'AGaramondPro-Regular';
    src: url('../fonts/adobegaramondpro/AGaramondPro-Regular.woff2') format('woff2'),
         url('../fonts/adobegaramondpro/AGaramondPro-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/* Adobe Garamond Pro Italic */
@font-face {
    font-family: 'AGaramondPro-Italic';
    src: url('../fonts/adobegaramondpro/AGaramondPro-Italic.woff2') format('woff2'),
         url('../fonts/adobegaramondpro/AGaramondPro-Italic.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}


/* Adobe Garamond Pro Bold */
@font-face {
    font-family: 'AGaramondPro-Bold';
    src: url('../fonts/adobegaramondpro/AGaramondPro-Bold.woff2') format('woff2'),
         url('../fonts/adobegaramondpro/AGaramondPro-Bold.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/* Proxima Nova */
@font-face {
    font-family: 'ProximaNova-Regular';
    src: url('../fonts/proximanova/ProximaNova-Regular.woff2') format('woff2'),
         url('../fonts/proximanova/ProximaNova-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/* Proxima Nova Italic */
@font-face {
    font-family: 'ProximaNova-Italic';
    src: url('../fonts/proximanova/ProximaNova-Italic.woff2') format('woff2'),
         url('../fonts/proximanova/ProximaNova-Italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
}

/* Proxima Nova Bold */
@font-face {
    font-family: 'ProximaNova-Bold';
    src: url('../fonts/proximanova/ProximaNova-Bold.woff2') format('woff2'),
         url('../fonts/proximanova/ProximaNova-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}

/* animations */
@keyframes sway {

  0%,
  100% {
    transform: rotate(-16deg);
  }

  50% {
    transform: rotate(16deg);
  }
}

@keyframes crackedOut {

  0%,
  100% {
    transform: rotate(-4deg);
  }

  50% {
    transform: rotate(4deg);
  }
}

/* header */
header {
  margin: 0;
}

.nav-links {
  padding-left: 0;
  list-style: none;
  display: flex;
  flex-direction: row;
  gap: 1rem;
  justify-content: flex-start;
  align-items: center;
}

.nav-links a {
  text-decoration: none;
  color: black;
}

/* hero */
.hero {
  margin: 2rem 0;
}

.hero-left {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 4rem;
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.hero-images {}

.hero-image {
  height: 54.4px;
  width: 80px;
  animation: crackedOut 0.09s ease-in-out infinite alternate;
}

.hero-image-static {
  border-radius: 6px;
  height: 256px;
  width: 256px;
}

.hero-gpus {
  display: flex;
  flex-direction: row;
}

/* sections */
.recent-notes,
.recent-videos,
.recent-projects {
  margin: 4rem 0;
}

.content-link {
  padding: 1em 0;
  text-decoration: none;
  color: black;
  display: flex;
  justify-content: space-between;
  border-bottom: 0.33px solid dimgray;
}

.content-title:hover {
  text-decoration: underline;
}

.view-all-button {
  text-decoration: none;
  color: black;
  background-color: lightgray;
  padding: 0.25rem 0.75rem;
  border-radius: 3px;
  border: 2px solid black;
}

.view-all-button:hover {
  opacity: 0.8;
}

.section-header {
  display: flex;
  justify-content: space-between;
  align-items: center;

}

.content-listing {
  padding-left: 0;
  list-style: none;
}

.highlight pre {
  font-family: monospace;
  overflow-x: scroll;
}


/* footer */
footer {
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.footer-icon {
  height:54.8px;
  width: 80px;
  animation: sway 3s ease-in-out infinite alternate;
}

.footer-link-icon {
  height: 32px;
  width: 32px;
}

.footer-links {
  list-style: none;
  padding-left: 0;
  display: flex;
  flex-direction: row;
  gap: 1rem;
}

@media screen and (max-width: 768px) {
  body {
    margin: 2rem;
  }

  main {
    width: 100%;
  }

  .hero-left {
    flex-direction: column;
  }
}

